--- a/prod/docker-compose.yml
+++ b/prod/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - ./data/sharelatex_data:/var/lib/overleaf
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      OVERLEAF_APP_NAME: Overleaf(Pro) Ayaka-notes Edition
+      OVERLEAF_APP_NAME: Overleaf Pro
 
       OVERLEAF_MONGO_URL: mongodb://mongo/sharelatex
 
@@ -117,6 +117,29 @@ services:
       TEX_LIVE_DOCKER_IMAGE: "ghcr.io/ayaka-notes/texlive-full:2023.1"
       ALL_TEX_LIVE_DOCKER_IMAGES: "ghcr.io/ayaka-notes/texlive-full:2023.1,ghcr.io/ayaka-notes/texlive-full:2022.1,ghcr.io/ayaka-notes/texlive-full:2021.1,ghcr.io/ayaka-notes/texlive-full:2020.1"
 
+      # s3的配置开始，不用的话自行注释掉
+      # OVERLEAF_FILESTORE_BACKEND: s3
+      # OVERLEAF_FILESTORE_USER_FILES_BUCKET_NAME: overleaf-user-files
+      # OVERLEAF_FILESTORE_TEMPLATE_FILES_BUCKET_NAME: overleaf-template-files
+      # OVERLEAF_FILESTORE_S3_ACCESS_KEY_ID: minioadmin
+      # OVERLEAF_FILESTORE_S3_SECRET_ACCESS_KEY: minioadmin
+      # OVERLEAF_FILESTORE_S3_ENDPOINT: http://minio:9000
+      # OVERLEAF_FILESTORE_S3_PATH_STYLE: "true"
+      # OVERLEAF_FILESTORE_S3_REGION: ""
+      # OVERLEAF_HISTORY_BACKEND: s3
+      # OVERLEAF_HISTORY_PROJECT_BLOBS_BUCKET: overleaf-project-blobs
+      # OVERLEAF_HISTORY_CHUNKS_BUCKET: overleaf-chunks
+      # OVERLEAF_HISTORY_S3_ACCESS_KEY_ID: minioadmin
+      # OVERLEAF_HISTORY_S3_SECRET_ACCESS_KEY: minioadmin
+      # OVERLEAF_HISTORY_S3_ENDPOINT: http://minio:9000
+      # OVERLEAF_HISTORY_S3_PATH_STYLE: "true"
+      # OVERLEAF_HISTORY_S3_REGION: ""
+      # s3的配置结束，不用的话自行注释掉
+
+
+      # 自动删除过期的资源
+      ENABLE_CRON_RESOURCE_DELETION: "true"
+
   mongo:
     restart: always
     image: mongo:5.0
@@ -158,6 +181,52 @@ services:
   TeXLive2020:
     image: ghcr.io/ayaka-notes/texlive-full:2020.1
   
+  # minio s3存储
+  # minio:
+  #   # restart: always
+  #   image: minio/minio:latest
+  #   command: server --console-address ':9001' /data
+  #   expose:
+  #     - 9000
+  #     - 9001
+  #   ports:
+  #     - "9000:9000"
+  #     - "9001:9001"
+  #   volumes:
+  #     - ./data/minio_data:/data
+  #   # environment:
+  #     # 自行修改
+  #     # MINIO_ROOT_USER: 
+  #     # MINIO_ROOT_PASSWORD: 
+  #   healthcheck:
+  #     test: ["CMD", "mc", "ready", "local"]
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 5
+
+  # 初始化minio的程序，执行完后自动退出
+  # init-minio:
+  #   image: minio/mc
+  #   depends_on:
+  #     - minio
+  #   entrypoint: >
+  #     /bin/bash -c "
+  #     /usr/bin/mc alias set s3 http://minio:9000 minioadmin minioadmin;
+  #     /usr/bin/mc mb --ignore-existing s3/overleaf-user-files;
+  #     /usr/bin/mc mb --ignore-existing s3/overleaf-template-files;
+  #     /usr/bin/mc mb --ignore-existing s3/overleaf-project-blobs;
+  #     /usr/bin/mc mb --ignore-existing s3/overleaf-chunks;
+  #     exit 0;
+  #     "
+  # mongo-express
+  # basicAuth credentials are "admin:pass"
+  # mongo-express:
+  #   image: mongo-express
+  #   ports:
+  #     - "8081:8081"
+  #   environment:
+  #     ME_CONFIG_MONGODB_SERVER: mongo
+
   # ldap:
   #    restart: always
   #    image: rroemhild/test-openldap
