fix: minio init and add secret env file

--- a/prod-s3/docker-compose.yml
+++ b/prod-s3/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     volumes:
       - ./data/sharelatex_data:/var/lib/overleaf
       - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+      - secrets.env
     environment:
       OVERLEAF_APP_NAME: Overleaf Pro
 
