--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -25,11 +25,16 @@ jobs:
             contacts,
             chat,
             clsi,
-            spelling
+            spelling,
+            references
           ]
     steps:
-      - name: "Check out code"
+      - name: "Checkout Internal Overleaf Action"
         uses: actions/checkout@main
+        with:
+          repository: ayaka-notes/overleaf-internal
+          ref: dev
+          token: ${{secrets.ORGTOKEN}}
       - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v3.0.0
         with:
@@ -38,14 +43,10 @@ jobs:
           password: ${{secrets.GITHUB_TOKEN}}
       - name: "Clone Overleaf And Build"
         run: |
-          git clone https://github.com/overleaf/overleaf ./overleaf
-          cp ./dev-patches/web-dockerfile/Dockerfile ./overleaf/services/web/Dockerfile
-          cd ./overleaf/develop/
+          cd ./overleaf/develop-pro/
           bin/build ${{matrix.image-name}}
-      - name: "Push Image"
-        run: |
-          docker tag develop-${{matrix.image-name}} ${{env.GHCR_REGISTRY}}/ayaka-notes/overleaf/dev/${{matrix.image-name}}:latest
-          docker push ${{env.GHCR_REGISTRY}}/ayaka-notes/overleaf/dev/${{matrix.image-name}}:latest
+          bin/push ${{matrix.image-name}}
+
   clean-image:
     runs-on: ubuntu-latest
     needs: build-image
