--- a/.github/workflows/develop-aliyun.yml
+++ b/.github/workflows/develop-aliyun.yml
@@ -44,8 +44,9 @@ jobs:
       - name: "Clone Overleaf And Build"
         run: |
           cd ./develop-pro/
-          docker compose -f ./docker-compose.aliyun.yml build ${{matrix.image-name}}
-          docker compose -f ./docker-compose.aliyun.yml push ${{matrix.image-name}}
+          make aliyun
+          bin/build ${{matrix.image-name}}
+          bin/push ${{matrix.image-name}}
 
   clean-image:
     runs-on: ubuntu-latest
