--- a/.github/workflows/develop-aliyun.yml
+++ b/.github/workflows/develop-aliyun.yml
@@ -1,6 +1,8 @@
 name: Overleaf Development Image(Aliyun)
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
 
 env:
   GHCR_REGISTRY: registry.cn-hangzhou.aliyuncs.com
