--- a/.github/workflows/overleaf-aliyun.yml
+++ b/.github/workflows/overleaf-aliyun.yml
@@ -3,7 +3,7 @@ name: Overleaf Pro Image(Aliyun)
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 */3 * * *'
 
 env:
   DOCKER_REGISTRY: registry.cn-hongkong.aliyuncs.com
