--- a/prod-s3/docker-compose.image.yml
+++ b/prod-s3/docker-compose.image.yml
@@ -1,5 +1,7 @@
 version: "2.2"
 services:
+  TeXLive2024:
+    image: ghcr.io/ayaka-notes/texlive-full:2024.1
   TeXLive2023:
     image: ghcr.io/ayaka-notes/texlive-full:2023.1
   TeXLive2022:
