--- a/aliyun-internal/docker-compose.yml
+++ b/aliyun-internal/docker-compose.yml
@@ -113,9 +113,10 @@ services:
       SANDBOXED_COMPILES_SIBLING_CONTAINERS: "true"
       # 记得改/workspaces/overleaf为你的克隆下来的仓库的路径
       SANDBOXED_COMPILES_HOST_DIR: "${CURRENT_DIR}/data/sharelatex_data/data/compiles"
-      SYNCTEX_BIN_HOST_PATH: "${CURRENT_DIR}/data/sharelatex_data/bin" 
-      TEX_LIVE_DOCKER_IMAGE: "ghcr.io/ayaka-notes/texlive-full:2024.1"
-      ALL_TEX_LIVE_DOCKER_IMAGES: "ghcr.io/ayaka-notes/texlive-full:2024.1"
+      SYNCTEX_BIN_HOST_PATH: "${CURRENT_DIR}/data/sharelatex_data/bin"
+      IMAGE_ROOT: "registry-vpc.cn-hongkong.aliyuncs.com/ayaka-notes"
+      TEX_LIVE_DOCKER_IMAGE: "registry-vpc.cn-hongkong.aliyuncs.com/ayaka-notes/texlive-full:2024.1"
+      ALL_TEX_LIVE_DOCKER_IMAGES: "registry-vpc.cn-hongkong.aliyuncs.com/ayaka-notes/texlive-full:2024.1,registry-vpc.cn-hongkong.aliyuncs.com/ayaka-notes/texlive-full:2023.1,registry-vpc.cn-hongkong.aliyuncs.com/ayaka-notes/texlive-full:2022.1,registry-vpc.cn-hongkong.aliyuncs.com/ayaka-notes/texlive-full:2021.1,registry-vpc.cn-hongkong.aliyuncs.com/ayaka-notes/texlive-full:2020.1"
 
       # s3的配置，不用的话自行注释掉
       OVERLEAF_FILESTORE_BACKEND: s3
