--- a/test-codespace/docker-compose.image.yml
+++ b/test-codespace/docker-compose.image.yml
@@ -1,9 +1,8 @@
-version: "2.2"
 services:
-  TeXLive2024:
-    image: ghcr.io/ayaka-notes/texlive-full:2024.1.slim
+  TeXLive2025:
+    image: ghcr.io/ayaka-notes/texlive-full:2025.1
   overleaf:
-    image: ghcr.io/ayaka-notes/overleaf:latest
+    image: registry-git.sjtu.edu.cn/nicsdev/latex/overleaf:symbolPalette
   mongo:
     image: mongo:5.0
   redis:
