--- a/test-codespace/docker-compose.yml
+++ b/test-codespace/docker-compose.yml
@@ -1,10 +1,9 @@
-version: "2.2"
 services:
   sharelatex:
     # restart: always
     # Server Pro users:
     # image: quay.io/sharelatex/sharelatex-pro
-    image: ghcr.io/ayaka-notes/overleaf:latest
+    image: registry-git.sjtu.edu.cn/nicsdev/latex/overleaf:symbolPalette
     container_name: sharelatex
     depends_on:
       mongo:
@@ -99,44 +98,48 @@ services:
       # OVERLEAF_NEW_PROJECT_TEMPLATE_LINKS: '[ {"name":"All Templates","url":"/templates/all"}]'
 
       # 用来设置references的API
-      OVERLEAF_IS_SERVER_PRO: "true"
+      # OVERLEAF_IS_SERVER_PRO: "true"
 
       # 学习页面
-      OVERLEAF_PROXY_LEARN: "true"
+      # OVERLEAF_PROXY_LEARN: "true"
       
       # 注意：COMPILE_TIMEOUT必须在所有数据初始化之前生效
       # 因为编译时间是和用户强相关的，每个用户有自己的编译时间限制
       # 如果你服务器运行很久了，需要手动写脚本，更新mongo数据库中的用户编译时间限制
-      COMPILE_TIMEOUT: "600"
       DOCKER_RUNNER: "true"
-      SANDBOXED_COMPILES: "true"
-      SANDBOXED_COMPILES_SIBLING_CONTAINERS: "true"
-      # 记得改/workspaces/overleaf为你的克隆下来的仓库的路径
-      SANDBOXED_COMPILES_HOST_DIR: "${CURRENT_DIR}/data/sharelatex_data/data/compiles"
-      SYNCTEX_BIN_HOST_PATH: "${CURRENT_DIR}/data/sharelatex_data/bin" 
-      TEX_LIVE_DOCKER_IMAGE: "ghcr.io/ayaka-notes/texlive-full:2024.1.slim"
-      ALL_TEX_LIVE_DOCKER_IMAGES: "ghcr.io/ayaka-notes/texlive-full:2024.1.slim"
+      TEXLIVE_IMAGE: ghcr.io/ayaka-notes/texlive-full:2025.1
+      TEX_LIVE_DOCKER_IMAGE: ghcr.io/ayaka-notes/texlive-full:2025.1
+      ALL_TEX_LIVE_DOCKER_IMAGES: "ghcr.io/ayaka-notes/texlive-full:2025.1"
+      COMPILES_HOST_DIR: ${PWD}/sharelatex_data/data/compiles
+      COMPILE_TIMEOUT: "600"
+      SANDBOXED_COMPILES: 'true'
+      SANDBOXED_COMPILES_SIBLING_CONTAINERS: 'true'
+      ### Bind-mount source for /var/lib/overleaf/data/compiles inside the container.
+      SANDBOXED_COMPILES_HOST_DIR_COMPILES: "${PWD}/data/sharelatex_data/data/compiles"
+      ### Bind-mount source for /var/lib/overleaf/data/output inside the container.
+      SANDBOXED_COMPILES_HOST_DIR_OUTPUT: '${PWD}/data/sharelatex_data/data/output'
+      TEXLIVE_IMAGE_USER: 'www-data'
 
-      # s3的配置，不用的话自行注释掉
-      OVERLEAF_FILESTORE_BACKEND: s3
-      OVERLEAF_FILESTORE_USER_FILES_BUCKET_NAME: overleaf-user-files
-      OVERLEAF_FILESTORE_TEMPLATE_FILES_BUCKET_NAME: overleaf-template-files
-      OVERLEAF_FILESTORE_S3_ACCESS_KEY_ID: minioadmin
-      OVERLEAF_FILESTORE_S3_SECRET_ACCESS_KEY: minioadmin
-      OVERLEAF_FILESTORE_S3_ENDPOINT: http://minio:9000
-      OVERLEAF_FILESTORE_S3_PATH_STYLE: "true"
-      OVERLEAF_FILESTORE_S3_REGION: ""
-      OVERLEAF_HISTORY_BACKEND: s3
-      OVERLEAF_HISTORY_PROJECT_BLOBS_BUCKET: overleaf-project-blobs
-      OVERLEAF_HISTORY_CHUNKS_BUCKET: overleaf-chunks
-      OVERLEAF_HISTORY_S3_ACCESS_KEY_ID: minioadmin
-      OVERLEAF_HISTORY_S3_SECRET_ACCESS_KEY: minioadmin
-      OVERLEAF_HISTORY_S3_ENDPOINT: http://minio:9000
-      OVERLEAF_HISTORY_S3_PATH_STYLE: "true"
-      OVERLEAF_HISTORY_S3_REGION: ""
+      # # s3的配置，不用的话自行注释掉
+      # OVERLEAF_FILESTORE_BACKEND: s3
+      # OVERLEAF_FILESTORE_USER_FILES_BUCKET_NAME: overleaf-user-files
+      # OVERLEAF_FILESTORE_TEMPLATE_FILES_BUCKET_NAME: overleaf-template-files
+      # OVERLEAF_FILESTORE_S3_ACCESS_KEY_ID: minioadmin
+      # OVERLEAF_FILESTORE_S3_SECRET_ACCESS_KEY: minioadmin
+      # OVERLEAF_FILESTORE_S3_ENDPOINT: http://minio:9000
+      # OVERLEAF_FILESTORE_S3_PATH_STYLE: "true"
+      # OVERLEAF_FILESTORE_S3_REGION: ""
+      # OVERLEAF_HISTORY_BACKEND: s3
+      # OVERLEAF_HISTORY_PROJECT_BLOBS_BUCKET: overleaf-project-blobs
+      # OVERLEAF_HISTORY_CHUNKS_BUCKET: overleaf-chunks
+      # OVERLEAF_HISTORY_S3_ACCESS_KEY_ID: minioadmin
+      # OVERLEAF_HISTORY_S3_SECRET_ACCESS_KEY: minioadmin
+      # OVERLEAF_HISTORY_S3_ENDPOINT: http://minio:9000
+      # OVERLEAF_HISTORY_S3_PATH_STYLE: "true"
+      # OVERLEAF_HISTORY_S3_REGION: ""
   mongo:
     # restart: always
-    image: mongo:5.0
+    image: mongo:6.0
     container_name: mongo
     command: "--replSet overleaf"
     expose:
@@ -146,7 +149,7 @@ services:
       # - ./initdb/:/docker-entrypoint-initdb.d/:ro
       # ./mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     healthcheck:
-      test: echo 'db.stats().ok' | mongo localhost:27017/test --quiet
+      test: echo 'db.stats().ok' | mongosh localhost:27017/test --quiet
       interval: 10s
       timeout: 10s
       retries: 5
@@ -176,8 +179,8 @@ services:
       timeout: 5s
       retries: 5
   
-  TeXLive2024:
-    image: ghcr.io/ayaka-notes/texlive-full:2024.1.slim
+  TeXLive2025:
+    image: ghcr.io/ayaka-notes/texlive-full:2025.1
 
 
   # ldap:
