--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -26,15 +26,15 @@ jobs:
             chat,
             clsi,
             spelling,
-            references
+            references,
+            linked-url-proxy
           ]
     steps:
       - name: "Checkout Internal Overleaf Action"
         uses: actions/checkout@main
         with:
-          repository: ayaka-notes/overleaf-internal
-          ref: dev
-          token: ${{secrets.ORGTOKEN}}
+          repository: yu-i-i/overleaf-cep
+          ref: ext-ce
       - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v3.0.0
         with:
@@ -43,10 +43,10 @@ jobs:
           password: ${{secrets.GITHUB_TOKEN}}
       - name: "Clone Overleaf And Build"
         run: |
-          cd ./develop-pro/
-          make ghcr
+          cd ./develop/
           bin/build ${{matrix.image-name}}
-          bin/push ${{matrix.image-name}}
+          docker tag develop-${{matrix.image-name}}:latest ${{env.GHCR_REGISTRY}}/ayaka-notes/overleaf/dev/${{matrix.image-name}}:latest
+          docker push ${{env.GHCR_REGISTRY}}/ayaka-notes/overleaf/dev/${{matrix.image-name}}:latest
 
   clean-image:
     runs-on: ubuntu-latest
