add public register

--- a/config/variables.env
+++ b/config/variables.env
@@ -181,3 +181,8 @@ TEMPLATE_THESIS_DESCRIPTION=Templates for writing theses and dissertations, foll
 
 TEMPLATE_ALL_NAME=All templates
 TEMPLATE_ALL_DESCRIPTION=Browse a collection of all available LaTeX templates, categorized by document type, style, and purpose.
+
+#################
+#   Register    #
+#################
+OVERLEAF_ALLOW_PUBLIC_REGISTRATION=true
